// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div
  class="za-input za-input-text"
>
  <input
    type="text"
  />
</div>
`;

exports[`Input showLength 1`] = `
<div
  class="za-input za-input-textarea"
>
  <textarea
    maxlength="100"
    rows="4"
  />
  <div
    class="za-input-length"
  >
    0/100
  </div>
</div>
`;

exports[`Input.Idcard renders correctly 1`] = `
<div
  class="za-input za-input-number"
>
  <input
    type="text"
    value=""
  />
  <div
    class="za-popup za-popup-hidden"
  >
    <div
      class="za-popup-wrapper za-popup-wrapper-bottom"
      style="-webkit-transition-duration:200ms;transition-duration:200ms"
    >
      <div
        class="za-keyboard"
      >
        <div
          class="za-keyboard-key"
        >
          <div
            class="za-keyboard-key-item"
          >
            1
          </div>
          <div
            class="za-keyboard-key-item"
          >
            2
          </div>
          <div
            class="za-keyboard-key-item"
          >
            3
          </div>
          <div
            class="za-keyboard-key-item"
          >
            4
          </div>
          <div
            class="za-keyboard-key-item"
          >
            5
          </div>
          <div
            class="za-keyboard-key-item"
          >
            6
          </div>
          <div
            class="za-keyboard-key-item"
          >
            7
          </div>
          <div
            class="za-keyboard-key-item"
          >
            8
          </div>
          <div
            class="za-keyboard-key-item"
          >
            9
          </div>
          <div
            class="za-keyboard-key-item"
          >
            x
          </div>
          <div
            class="za-keyboard-key-item"
          >
            0
          </div>
          <div
            class="za-keyboard-key-item"
          >
            <i
              class="za-icon za-icon-keyboard"
            />
          </div>
        </div>
        <div
          class="za-keyboard-handle"
        >
          <div
            class="za-keyboard-handle-item"
          >
            <i
              class="za-icon za-icon-deletekey"
            />
          </div>
          <div
            class="za-keyboard-handle-item za-keyboard-handle-item-ok"
          >
            确定
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input.Number renders correctly 1`] = `
<div
  class="za-input za-input-number"
>
  <input
    type="text"
    value=""
  />
  <div
    class="za-popup za-popup-hidden"
  >
    <div
      class="za-popup-wrapper za-popup-wrapper-bottom"
      style="-webkit-transition-duration:200ms;transition-duration:200ms"
    >
      <div
        class="za-keyboard"
      >
        <div
          class="za-keyboard-key"
        >
          <div
            class="za-keyboard-key-item"
          >
            1
          </div>
          <div
            class="za-keyboard-key-item"
          >
            2
          </div>
          <div
            class="za-keyboard-key-item"
          >
            3
          </div>
          <div
            class="za-keyboard-key-item"
          >
            4
          </div>
          <div
            class="za-keyboard-key-item"
          >
            5
          </div>
          <div
            class="za-keyboard-key-item"
          >
            6
          </div>
          <div
            class="za-keyboard-key-item"
          >
            7
          </div>
          <div
            class="za-keyboard-key-item"
          >
            8
          </div>
          <div
            class="za-keyboard-key-item"
          >
            9
          </div>
          <div
            class="za-keyboard-key-item za-keyboard-key-item-disabled"
          />
          <div
            class="za-keyboard-key-item"
          >
            0
          </div>
          <div
            class="za-keyboard-key-item"
          >
            <i
              class="za-icon za-icon-keyboard"
            />
          </div>
        </div>
        <div
          class="za-keyboard-handle"
        >
          <div
            class="za-keyboard-handle-item"
          >
            <i
              class="za-icon za-icon-deletekey"
            />
          </div>
          <div
            class="za-keyboard-handle-item za-keyboard-handle-item-ok"
          >
            确定
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input.Price renders correctly 1`] = `
<div
  class="za-input za-input-number"
>
  <input
    type="text"
    value=""
  />
  <div
    class="za-popup za-popup-hidden"
  >
    <div
      class="za-popup-wrapper za-popup-wrapper-bottom"
      style="-webkit-transition-duration:200ms;transition-duration:200ms"
    >
      <div
        class="za-keyboard"
      >
        <div
          class="za-keyboard-key"
        >
          <div
            class="za-keyboard-key-item"
          >
            1
          </div>
          <div
            class="za-keyboard-key-item"
          >
            2
          </div>
          <div
            class="za-keyboard-key-item"
          >
            3
          </div>
          <div
            class="za-keyboard-key-item"
          >
            4
          </div>
          <div
            class="za-keyboard-key-item"
          >
            5
          </div>
          <div
            class="za-keyboard-key-item"
          >
            6
          </div>
          <div
            class="za-keyboard-key-item"
          >
            7
          </div>
          <div
            class="za-keyboard-key-item"
          >
            8
          </div>
          <div
            class="za-keyboard-key-item"
          >
            9
          </div>
          <div
            class="za-keyboard-key-item"
          >
            .
          </div>
          <div
            class="za-keyboard-key-item"
          >
            0
          </div>
          <div
            class="za-keyboard-key-item"
          >
            <i
              class="za-icon za-icon-keyboard"
            />
          </div>
        </div>
        <div
          class="za-keyboard-handle"
        >
          <div
            class="za-keyboard-handle-item"
          >
            <i
              class="za-icon za-icon-deletekey"
            />
          </div>
          <div
            class="za-keyboard-handle-item za-keyboard-handle-item-ok"
          >
            确定
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input.Textarea autosize 1`] = `
<Input
  autosize={true}
  onChange={[Function]}
  rows={4}
  type="textarea"
  value="foo"
>
  <InputTextarea
    autosize={true}
    disabled={false}
    onChange={[Function]}
    prefixCls="za-input"
    rows={4}
    showLength={false}
    value="foo"
  >
    <div
      className="za-input za-input-textarea"
    >
      <textarea
        disabled={false}
        maxLength={undefined}
        onChange={[Function]}
        rows={4}
        value="foo"
      />
    </div>
  </InputTextarea>
</Input>
`;

exports[`Input.Textarea renders correctly 1`] = `
<div
  class="za-input za-input-textarea"
>
  <textarea
    rows="4"
  />
</div>
`;
